--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <div id="preview-container">
     <button id="prev">⬅</button>
+    <div class="image-container">
     <img id="preview" src="" alt="">
+    <p id="image-description"></p>
+    </div>
     <button id="next">➡</button>
 </div>
 
