fix: some styles and tag img

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="preview-container">
     <button id="prev">⬅</button>
     <div class="image-container">
-    <img id="preview" src="" alt="">
+    <img id="preview" src="./images/cat.jpg" alt="pet_images">
     <p id="image-description"></p>
     </div>
     <button id="next">➡</button>
